fix print display type alignment

--- a/assets/print/pdf.css
+++ b/assets/print/pdf.css
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: Courier, 'Courier New', monospace !important;
 }
 
-ul, ol, div, p {
+/* ul, ol, div, p {
 	visibility: visible;
 	position: static;
 	width: auto;
@@ -52,7 +52,7 @@ ul, ol, div, p {
 	display: block;
 	overflow: visible;
 	margin: auto;
-}
+} */
 .reveal {
 	width: auto !important;
 	height: auto !important;
